# NasuTek-Odyssey

./: .gitignore  CMakeLists.txt  COPYING.ARM  CREDITS  Doxyfile  INSTALL  Makefile  PreLoad.cmake  README  apistatus.lst  configure.cmd  configure.sh  depmap.xsl  lol  rosbuild.bat  vreport.xsl
base/applications/wordpad/: CMakeLists.txt
base/services/eventlog/: CMakeLists.txt  eventlog.c  eventlog.h  eventlog.rc  eventsource.c  file.c  logport.c  rpc.c
base/services/wlansvc/: CMakeLists.txt  rpcserver.c  wlansvc.c
base/setup/: CMakeLists.txt
base/setup/odyssey32/: CMakeLists.txt  odyssey.c
base/setup/odyssey32/lang/: en-US.rc  es-ES.rc  id-ID.rc  ja-JP.rc  nl-NL.rc  no-NO.rc  pl-PL.rc
base/system/services/: CMakeLists.txt  config.c  database.c  driver.c  groupdb.c  rpcserver.c  services.c  services.rc
boot/: CMakeLists.txt
boot/armllb/: boot.s  crtsupp.c  envir.c  fw.c  main.c
boot/bootdata/: CMakeLists.txt  autorun.inf  bootcd.ini  bootcd_ocd.inf  hivecls_amd64.inf  hivecls_arm.inf  hivecls_i386.inf  hivedef_amd64.inf  hivedef_arm.inf  hiveinst_arm.inf  hivesft_amd64.inf  hivesft_arm.inf  hivesys_amd64.inf  hivesys_arm.inf  hivesys_i386.inf  instcd.inf  instcd.ini  instcd_ocd.inf  livecd.inf  livecd.ini  livecd_ocd.inf  readme.txt  txtsetup.sif  txtsetup_gui.sif
boot/bootdata/bootcd/: unattend.inf
boot/bootdata/bootcdregtest/: testboot.bat.sample  unattend.inf
boot/freeldr/: FREELDR.INI
cmake/: CMakeMacros.cmake  config-amd64.cmake  config-arm.cmake  config.cmake  gcc.cmake  msvc.cmake
dll/keyboard/kbdarmw/: CMakeLists.txt  kbdarmw.c  kbdarmw.rc
dll/keyboard/kbdblr/: CMakeLists.txt  kbdblr.c  kbdblr.rc
dll/keyboard/kbdbr/: CMakeLists.txt  kbdbr.c  kbdbr.rc
dll/keyboard/kbdcz/: CMakeLists.txt  kbdcz.c  kbdcz.rc
dll/keyboard/kbdes/: CMakeLists.txt  kbdes.c  kbdes.rc
dll/keyboard/kbdfi/: CMakeLists.txt  kbdfi.c  kbdfi.rc
dll/keyboard/kbdgeo/: CMakeLists.txt  kbdgeo.c  kbdgeo.rc
dll/keyboard/kbdgerg/: CMakeLists.txt  kbdgerg.c  kbdgerg.rc
dll/keyboard/kbdhe/: CMakeLists.txt  kbdhe.c  kbdhe.rc
dll/keyboard/kbdheb/: CMakeLists.txt  kbdheb.c  kbdheb.rc
dll/keyboard/kbdinasa/: CMakeLists.txt  kbdinasa.c  kbdinasa.rc
dll/keyboard/kbdinguj/: CMakeLists.txt  kbdinguj.c  kbdinguj.rc
dll/keyboard/kbdlv/: CMakeLists.txt  kbdlv.c  kbdlv.rc
dll/keyboard/kbdsk/: CMakeLists.txt  kbdsk.c  kbdsk.rc
dll/keyboard/kbdtat/: CMakeLists.txt  kbdtat.c  kbdtat.rc
dll/keyboard/kbdtuq/: CMakeLists.txt  kbdtuq.c  kbdtuq.rc
dll/keyboard/kbdur/: CMakeLists.txt  kbdur.c  kbdur.rc
dll/keyboard/kbdurs/: CMakeLists.txt  kbdurs.c  kbdurs.rc
dll/keyboard/kbdus/: CMakeLists.txt  kbdus.c  kbdus.rc
dll/keyboard/kbdusr/: CMakeLists.txt  kbdusr.c  kbdusr.rc
dll/ntdll/: CMakeLists.txt
dll/win32/activeds/: CMakeLists.txt
drivers/wmi/: CMakeLists.txt  wmilib.c  wmilib.rc  wmilib.spec
hal/: hal.pspec
hal/halx86/: CMakeLists.txt
importlibs/: oldnames.lib
include/asm/: asm.inc  ks386.template.h
include/ddk/: csq.h  drmk.h  ide.h  ndis.h  ntddk.h  ntddsnd.h  ntifs.h  portcls.h  punknown.h  stdunk.h  wdm.h
include/dxsdk/: CMakeLists.txt  bdamedia.h  bdatypes.h
include/host/: config.h  nls.h  typedefs.h
include/ndk/: asm.h  umtypes.h  vffuncs.h  vftypes.h
include/odyssey/: asm.h  asm.inc  buildno.h.cmake  debug.h  exeformat.h  probe.h  reactx.h  rosioctl.h  rosldr.h  rossym.h  stubs.h  undocuser.h  version.cmake  version.h  version.h.cmake  version.rc  winlogon.h
include/psdk/: common.ver  compstui.h  ddkernel.h  ddraw.h  ddrawgdi.h  devioctl.h  devpropdef.h  dmemmgr.h  dpfilter.h  driverspecs.h  dvp.h  evntprov.h  kcom.h  ks.h  ksdebug.h  ksuuids.h  ktmtypes.h  lmon.h  netevent.h  nettypes.h  ntddmmc.h  ntdef.h  ntiologc.h  ntverp.h  objerror.h  polarity.h  rpc.h  scrnsave.h  sdkddkver.h  shlguid.h  shlobj_undoc.h  shlwapi_undoc.h  usb.h  usb100.h  usb200.h  usbcamdi.h  usbdi.h  usbioctl.h  usbiodef.h  usbrpmif.h  (+3 more)
include/xdk/: devioctl.template.h  ntddk.template.h  ntifs.template.h  wdm.template.h
lib/atl/: atlbase.cpp  atlbase.h  atlcom.h  atlcore.cpp  atlcore.h  atlwin.h  statreg.h
lib/cmlib/: cmdata.h  cminit.c  cmlib.h  hivebin.c  hivecell.c  hivedata.h  hiveinit.c  hivesum.c  hivewrt.c
lib/cportlib/: cport.c
lib/dnslib/: addr.c  debug.c  dnsaddr.c  dnsutil.c  flatbuf.c  hostent.c  ip6.c  memory.c  name.c  print.c  record.c  rrprint.c  sablob.c  straddr.c  string.c  table.c  utf8.c
lib/inflib/: README.txt  builddep.h  infcommon.h  infcore.c  infget.c  infhost.h  infhostgen.c  infhostget.c  infhostput.c  inflib.h  infpriv.h  infput.c  infros.h  infrosgen.c  infrosget.c  infrosput.c
lib/lsalib/: CMakeLists.txt  lsa.c
lib/newinflib/: README.txt  builddep.h  infcore.c  infget.c  infhost.h  infhostgen.c  infhostget.c  infhostput.c  infhostrtl.c  inflib.mak  infpriv.h  infput.c  infros.h  infrosgen.c  infrosget.c  infrosput.c
lib/ppcmmu/: gdblib.c  ppcmmu.mak
lib/recyclebin/: guid.c  recyclebin.c  recyclebin_generic.c  recyclebin_generic_enumerator.c  recyclebin_v5.c  recyclebin_v5.h  recyclebin_v5_enumerator.c
lib/rossym/: delete.c  dummy.c  dwarfabbrev.c  dwarfaranges.c  dwarfcfa.c  dwarfget.c  dwarfinfo.c  dwarfopen.c  dwarfpc.c  dwarfpubnames.c  find.c  fromfile.c  frommem.c  init.c  initkm.c  initum.c  iofile.c  pe.c  rossympriv.h  zwfile.c
lib/rossym_new/: delete.c  dummy.c  find.c  getraw.c  (+9 more)
media/: CMakeLists.txt
media/doc/: HACKING  INDEX  INTERNALS  README.WINE  notes  win32k_refs.txt
media/drivers/etc/: hosts  services
media/fonts/: CMakeLists.txt
media/inf/: CMakeLists.txt  audio.inf  font.inf  intl.inf  layout.inf  netamd.inf  netrtpnt.inf  nettcpip.inf  syssetup.inf.tpl  xboxdisp.inf
media/nls/: CMakeLists.txt
media/vgafonts/: CMakeLists.txt
media/wallpapers/: wallpapers.txt
ntoskrnl/: CMakeLists.txt  KrnlFun.c  ntoskrnl.rc
tools/: CMakeLists.txt  getdate.c  pefixup.c  stubgen.c  tools.mak
tools/mkhive/: CMakeLists.txt  cmi.c  cmi.h  mkhive.c  mkhive.h  reginf.h  registry.c  registry.h  rtl.c
tools/ocdgen/: CMakeLists.txt  binhive.c  binhive.h  mkhive.c  reginf.c  registry.c  registry.h
(+4886 files in other folders)
